Drivers are invalidated when running in background mode #45926

Closed
opened 2015-08-27 14:34:10 +02:00 by Peter Staples · 5 comments

System Information
Ubuntu 15.05

Blender Version
Broken: 2.75

Short description of error
Drivers are run before being added to drivers namespace from reg'd textblock when running blender in bg mode.
as detailed here http://blender.stackexchange.com/questions/36511/drivers-not-working-when-running-blender-in-the-background-from-command-line

running the following on attached blend

blender -b -y <pathto>/x.blend

or

blender -b -y <pathto> /x.blend  --python-text x.py

produces the following

-----------------------------------------
read blend: /home/batfinger/Documents/x.blend

Error in Driver: The following Python expression failed:
	'x(frame)'

Traceback (most recent call last):
File "<bpy driver>", line 1, in <module>
NameError: name 'x' is not defined
RUNNING x.py in x.blend
is driver valid False

Exact steps for others to reproduce the error

  • download attached .blend file
  • Run any of the mentioned commands
  • x.blend
**System Information** Ubuntu 15.05 **Blender Version** Broken: 2.75 **Short description of error** Drivers are run before being added to drivers namespace from reg'd textblock when running blender in bg mode. as detailed here http://blender.stackexchange.com/questions/36511/drivers-not-working-when-running-blender-in-the-background-from-command-line running the following on attached blend ``` blender -b -y <pathto>/x.blend ``` or ``` blender -b -y <pathto> /x.blend --python-text x.py ``` produces the following ``` ----------------------------------------- read blend: /home/batfinger/Documents/x.blend Error in Driver: The following Python expression failed: 'x(frame)' Traceback (most recent call last): File "<bpy driver>", line 1, in <module> NameError: name 'x' is not defined RUNNING x.py in x.blend is driver valid False ``` **Exact steps for others to reproduce the error** - download attached .blend file - Run any of the mentioned commands - [x.blend](https://archive.blender.org/developer/F228498/x.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @PeterStaples

Added subscriber: @PeterStaples

This issue was referenced by 2112bd892b

This issue was referenced by 2112bd892b5b3e210e0d272c0fea07496c778c60

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Note that the fix for this only relates to evaluating registered text blocks, the example: blender -b -y <pathto> /x.blend --python-text x.py was not resolved as x.py is evaluated after the blend file is evaluated.

Note that the fix for this only relates to evaluating registered text blocks, the example: `blender -b -y <pathto> /x.blend --python-text x.py` was not resolved as `x.py` is evaluated _after_ the blend file is evaluated.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45926
No description provided.