Fix T45926: Drivers fail in background mode

Scene evaluation was done before text blocks were registered.